Wersja 4 - wykonane zadania JS 1-3

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sit On Chair</title>
     <link rel="stylesheet" href="./css/style.css"/>
+    <script src="js/app.js" type="text/javascript"></script>
 </head>
 <body>
     <header id="header">
@@ -33,10 +34,22 @@
     <section id="intro">
         <div class="container clearfix">
             <div>&lt;</div>
-            <div class="intro-img"></div>
+            <div class="intro-img imgOne"></div>
+            <div class="intro-img imgTwo"></div>
+            <div class="intro-img imgThree"></div>
             <div class="intro-content">
                 <h1>SIT <span>ON</span> OUR <span>CHAIR</span></h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sed odio vitae rutrum. Donec at accumsan lectus. Mauris venenatis sodales dolor, eu eleifend ex placerat vel. Nulla venenatis lacus aliquam velit tempus, pulvinar suscipit neque suscipit. </p>
+                <div>ZOBACZ WIĘCEJ</div>
+            </div>
+            <div class="intro-content">
+                <h1>SIT <span>ON</span> RED <span>CHAIR</span></h1>
+                <p>Lorem ipsum RED CHAIR, consectetur adipiscing elit. Sed malesuada sed odio vitae rutrum. Donec at accumsan lectus. Mauris venenatis sodales dolor, eu eleifend ex placerat vel. Nulla venenatis lacus aliquam velit tempus, pulvinar suscipit neque suscipit. </p>
+                <div>ZOBACZ WIĘCEJ</div>
+            </div>
+            <div class="intro-content">
+                <h1>SIT <span>ON</span> ORANGE <span>CHAIR</span></h1>
+                <p>Lorem ipsum ORANGE CHAIR, consectetur adipiscing elit. Sed malesuada sed odio vitae rutrum. Donec at accumsan lectus. Mauris venenatis sodales dolor, eu eleifend ex placerat vel. Nulla venenatis lacus aliquam velit tempus, pulvinar suscipit neque suscipit. </p>
                 <div>ZOBACZ WIĘCEJ</div>
             </div>
             <div>&gt;</div>            
@@ -45,13 +58,13 @@
     
     <section id="gallery">
         <div class="container clearfix">
-            <div>
+            <div class="chair">
                 <div>
                     <h3>Chair CLAIR</h3>
                     <div></div>
                 </div>
             </div>
-            <div>
+            <div class="chair">
                 <div>
                     <h3>Chair MARGARITA</h3>
                     <div></div>
